# push-glib

./: .gitignore  Makefile.am  Makefile.include  README  autogen.sh  configure.ac  push-glib-1.0.pc.in
doc/: .gitignore  Makefile.am  push-glib-docs.sgml
push-glib/: Makefile.include  push-aps-client.c  push-aps-client.h  push-aps-identity.c  push-aps-identity.h  push-aps-message.c  push-aps-message.h  push-c2dm-client.c  push-c2dm-client.h  push-c2dm-identity.c  push-c2dm-identity.h  push-c2dm-message.c  push-c2dm-message.h  push-debug.h  push-glib.h
tests/: Makefile.include
tools/: Makefile.include  push-aps.c  push-c2dm.c
